--- a/Project0/Features/PlaceOrders.xaml
+++ b/Project0/Features/PlaceOrders.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="PlaceOrders" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="592,1360" sap2010:WorkflowViewState.IdRef="PlaceOrders_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="PlaceOrders" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="991,1459" sap2010:WorkflowViewState.IdRef="PlaceOrders_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="30">
       <x:String>System.Activities</x:String>
@@ -34,7 +34,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="26">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="52">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -61,9 +61,10 @@
       <AssemblyReference>Microsoft.Bcl.AsyncInterfaces</AssemblyReference>
       <AssemblyReference>System.ServiceModel</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="PlaceOrders" sap:VirtualizedContainerService.HintSize="476,1295" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="PlaceOrders" sap:VirtualizedContainerService.HintSize="476,1394" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="orderId" />
       <Variable x:TypeArguments="x:String" Name="log" />
@@ -78,9 +79,7 @@
     </sap:WorkflowViewStateService.ViewState>
     <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke GetLatestOrderId workflow" sap:VirtualizedContainerService.HintSize="434,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="DataAccess\GetLatestOrderId.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="x:Int32" x:Key="orderId">
-          <mva:VisualBasicReference x:TypeArguments="x:Int32" ExpressionText="orderId" />
-        </OutArgument>
+        <OutArgument x:TypeArguments="x:Int32" x:Key="orderId">[orderId]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:ExcelApplicationScope Password="{x:Null}" DisplayName="Excel Application Scope" sap:VirtualizedContainerService.HintSize="434,359" sap2010:WorkflowViewState.IdRef="ExcelApplicationScope_1" InstanceCachePeriod="3000" WorkbookPath="Data\RoSADatasheet.xlsx">
@@ -143,23 +142,16 @@
             </Assign>
             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke PlaceOrder workflow" sap:VirtualizedContainerService.HintSize="334,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Features\PlaceOrder.xaml">
               <ui:InvokeWorkflowFile.Arguments>
-                <InArgument x:TypeArguments="x:Int32" x:Key="orderId">
-                  <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="orderId" />
-                </InArgument>
-                <InArgument x:TypeArguments="sd:DataTable" x:Key="products">
-                  <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="products" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="shoppingList">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="shoppingList" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="email">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="email" />
-                </InArgument>
+                <InArgument x:TypeArguments="x:Int32" x:Key="orderId">[orderId]</InArgument>
+                <InArgument x:TypeArguments="sd:DataTable" x:Key="products">[products]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="shoppingList">[shoppingList]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="email">[email]</InArgument>
               </ui:InvokeWorkflowFile.Arguments>
             </ui:InvokeWorkflowFile>
           </Sequence>
         </ActivityAction>
       </ui:ForEachRow.Body>
     </ui:ForEachRow>
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="434,59" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;You have now placed these orders.&quot;]" />
   </Sequence>
 </Activity>
